// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders correctly 1`] = `
<div
  class="za-search-bar"
>
  <form
    action="#"
    class="za-search-bar-form"
  >
    <div
      class="za-search-bar-content shape-round"
    >
      <div
        class="za-search-bar-mock"
      >
        <div
          class="za-search-bar-mock-container"
        >
          <i
            class="za-icon za-icon-search"
          />
          <span
            class="za-search-bar-mock-placeholder"
            style="visibility:visible"
          >
            搜索
          </span>
        </div>
      </div>
      <div
        class="za-input za-input--clearable"
      >
        <input
          autocomplete="off"
          placeholder="搜索"
          type="search"
          value=""
        />
        <i
          class="za-icon za-input__clear za-icon-wrong-round-fill"
        />
      </div>
    </div>
    <div
      class="za-search-bar-cancel"
    >
      取消
    </div>
  </form>
</div>
`;

exports[`SearchBar renders defaultValue correctly 1`] = `
<ForwardRef(forwardRefFactory)
  cancelText="取消取消"
  defaultValue="搜索关键字"
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    cancelText="取消取消"
    defaultValue="搜索关键字"
    forwardedRef={null}
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      cancelText="取消取消"
      clearable={true}
      defaultValue="搜索关键字"
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-round"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel"
            onClick={[Function]}
          >
            取消取消
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`SearchBar renders onCancel called correctly 1`] = `
<ForwardRef(forwardRefFactory)
  onCancel={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onCancel={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      onCancel={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-round"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel"
            onClick={[Function]}
          >
            Cancel
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`SearchBar renders onChange called correctly 1`] = `
<ForwardRef(forwardRefFactory)
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "测试值",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "测试值",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              "测试值",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form za-search-bar-form-focus"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-round"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "hidden",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value="测试值"
            >
              <div
                className="za-input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value="测试值"
                />
                <Icon
                  className="za-input__clear za-input__clear--show"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-input__clear--show za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel za-search-bar-cancel-show"
            onClick={[Function]}
          >
            Cancel
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`SearchBar renders onClear called correctly 1`] = `
<ForwardRef(forwardRefFactory)
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <LocaleReceiver
    forwardedRef={null}
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      onClear={
        [MockFunction] {
          "calls": Array [
            Array [
              "",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      prefixCls="za-search-bar"
      shape="rect"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-rect"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  Search
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="Search"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="Search"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel"
            onClick={[Function]}
          >
            Cancel
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`SearchBar renders onFocus called correctly 1`] = `
<ForwardRef(forwardRefFactory)
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      onFocus={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form za-search-bar-form-focus"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-round"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "visible",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value=""
            >
              <div
                className="za-input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value=""
                />
                <Icon
                  className="za-input__clear"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel za-search-bar-cancel-show"
            onClick={[Function]}
          >
            Cancel
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`SearchBar renders onSubmit called correctly 1`] = `
<ForwardRef(forwardRefFactory)
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          "My new value",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder="搜索"
  shape="round"
>
  <LocaleReceiver
    forwardedRef={null}
    onSubmit={
      [MockFunction] {
        "calls": Array [
          Array [
            "My new value",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    placeholder="搜索"
    shape="round"
  >
    <SearchBar
      clearable={true}
      disabled={false}
      locale={
        Object {
          "cancelText": "Cancel",
          "placeholder": "Search",
        }
      }
      localeCode="en"
      onSubmit={
        [MockFunction] {
          "calls": Array [
            Array [
              "My new value",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      placeholder="搜索"
      prefixCls="za-search-bar"
      shape="round"
      showCancel={false}
    >
      <div
        className="za-search-bar"
      >
        <form
          action="#"
          className="za-search-bar-form za-search-bar-form-focus"
          onSubmit={[Function]}
        >
          <div
            className="za-search-bar-content shape-round"
          >
            <div
              className="za-search-bar-mock"
            >
              <div
                className="za-search-bar-mock-container"
              >
                <Icon
                  prefixCls="za-icon"
                  type="search"
                >
                  <i
                    className="za-icon za-icon-search"
                  />
                </Icon>
                <span
                  className="za-search-bar-mock-placeholder"
                  style={
                    Object {
                      "visibility": "hidden",
                    }
                  }
                >
                  搜索
                </span>
              </div>
            </div>
            <InputBase
              clearable={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClear={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              placeholder="搜索"
              prefixCls="za-input"
              readOnly={false}
              type="search"
              value="My new value"
            >
              <div
                className="za-input za-input--focus za-input--clearable"
              >
                <input
                  autoComplete="off"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onCompositionEnd={[Function]}
                  onCompositionStart={[Function]}
                  onCompositionUpdate={[Function]}
                  onFocus={[Function]}
                  placeholder="搜索"
                  type="search"
                  value="My new value"
                />
                <Icon
                  className="za-input__clear za-input__clear--show"
                  onClick={[Function]}
                  prefixCls="za-icon"
                  type="wrong-round-fill"
                >
                  <i
                    className="za-icon za-input__clear za-input__clear--show za-icon-wrong-round-fill"
                    onClick={[Function]}
                  />
                </Icon>
              </div>
            </InputBase>
          </div>
          <div
            className="za-search-bar-cancel za-search-bar-cancel-show"
            onClick={[Function]}
          >
            Cancel
          </div>
        </form>
      </div>
    </SearchBar>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;
